# angular-module-analyzer

./: Cargo.toml  README.md
src/: main.rs
