[package]
name = "angular-module-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.7"
petgraph = "0.6"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"